DELETEの修正